# fragment

./: .gitignore  README.md  demo_note.js  demo_note.ts  index.html  main.js  package-lock.json  package.json  renderer.js  renderer.tsx  style.css  tsconfig.json
fragment-backend/: README.md  package-lock.json  package.json
fragment-backend/lib/: index.js
fragment-backend/native/: Cargo.toml
fragment-backend/native/src/: lib.rs
fragment-druid/: Cargo.toml
fragment-druid/src/: main.rs
fragment-electron/: .gitignore  electron_main.js  package.json  webpack.config.js
fragment-electron/public/: global.css
fragment-electron/src/: App.svelte  List.svelte  Note.svelte  Search.svelte  SplitPane.svelte  stores.js
fragment-search/: Cargo.toml
fragment-search/examples/: basic.rs
fragment-search/src/: lib.rs  tantivy-backup.rs
local_modules/frag_native/: README.md  package-lock.json  package.json
local_modules/frag_native/lib/: index.js
local_modules/frag_native/native/: Cargo.toml
local_modules/frag_native/native/fragment-search/: Cargo.toml
local_modules/frag_native/native/fragment-search/src/: lib.rs
local_modules/frag_native/native/src/: lib.rs  list_files.rs  search.rs  tantivy_search.rs
