[package]
name = "fragment-druid"
version = "0.1.0"
authors = ["Paul Miller <paul@pauljmiller.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {git = "https://github.com/futurepaul/druid", branch = "work-styled-plus-align" }
fragment-search = { path = "../fragment-search", version = "0.1" }