[package]
name = "fragment-backend"
version = "0.1.0"
authors = ["Paul Miller <paul@pauljmiller.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "fragment_backend"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
fragment-search = { path = "../../fragment-search", version = "0.1" }
open = "1.2.2"