[package]
name = "frag_native"
version = "0.1.0"
authors = ["Paul Miller <paul@pauljmiller.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "frag_native"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
