[package]
name = "frag_native"
version = "0.1.0"
authors = ["Paul Miller <paul@pauljmiller.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "frag_native"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
grep = "0.2"
walkdir = "2.2.7"
state = "0.4.1"